use deprecated thread id getter for backwards compatibility with pre-19 java